--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rust-unindent (0.1.8-1pexip1) pexip; urgency=medium
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 16 Nov 2022 19:38:47 +0000
+
 rust-unindent (0.1.8-1) unstable; urgency=medium
 
   * Team upload.
