--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rust-unindent (0.1.8-1pexip2) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:33:03 +0000
+
 rust-unindent (0.1.8-1pexip1) pexip; urgency=medium
 
   * Prepare Pexip packaging
