--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rust-unindent (0.1.8-1pexip3) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:58:38 +0000
+
 rust-unindent (0.1.8-1pexip2) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
