--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rust-unindent (0.1.8-1+pexip24u4) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:35:01 +0000
+
 rust-unindent (0.1.8-1pexip3) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
